Switch to JDK17, implement pagination for retrieving all users