@@ -17,9 +17,11 @@
 
 package codes.vps.mockta.ws.okta;
 
-import codes.vps.mockta.obj.okta.ErrorObject;
 import codes.vps.mockta.db.OktaSession;
 import codes.vps.mockta.db.SessionDB;
+import codes.vps.mockta.obj.okta.ErrorObject;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -28,10 +30,9 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.util.DefaultUriBuilderFactory;
 import org.springframework.web.util.UriBuilder;
 
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
 @RestController
 @RequestMapping(path = {"/oauth2/v1/logout", "/oauth2/{authServer}/v1/logout"})
@@ -50,7 +51,7 @@ public class LogoutController {
 			SessionDB.remove(session);
 		} catch (ErrorObject.MyException ignored) {}
 
-		UriBuilder b = new DefaultUriBuilderFactory().uriString(URLDecoder.decode(redirectUri, "UTF-8"));
+		UriBuilder b = new DefaultUriBuilderFactory().uriString(URLDecoder.decode(redirectUri, StandardCharsets.UTF_8));
 		b.replaceQueryParam("state", state);
 
 		response.sendRedirect(b.build().toString());
